--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3,7 +3,7 @@ en:
     admin:
       site_settings:
         categories:
-          TODO_plugin_name: "Plugin Name"
+          statewidget: "Statewidget"
   js:
-    discourse_plugin_name:
+    statewidget:
       placeholder: placeholder
